--- a/public/02-catalog.html
+++ b/public/02-catalog.html
@@ -20,7 +20,7 @@
 			<div class="topLine section" id="topLine">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-auto">
+						<div class="col-lg-auto">
 							<div class="topLine__logo"><a href="/"><img src="img/svg/logo.svg" alt=""/></a>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 						</div>
 						<div class="topLine-menu col-auto">
 							<div class="row">
-								<div class="col-auto d-md-none">
+								<div class="col-auto d-lg-none">
 									<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 									</div>
 								</div>
@@ -1109,103 +1109,92 @@
 					<div class="sliderAutoWidth sliderAutoWidth--js swiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-1.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Водоснабжение и полив</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Водоснабжение и полив
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-2.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Мототехника</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Мототехника
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-3.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Обогрев и вентиляция</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Обогрев и вентиляция
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-4.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Продукция STIHL и Viking</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Продукция STIHL и Viking
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-5.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Расходные материалы и аксессуары</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Расходные материалы и аксессуары
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-6.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Садовая техника</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Садовая техника
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-7.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Садовый инвентарь и инструменты</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Садовый инвентарь и инструменты
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-8.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Сварочное оборудование</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Сварочное оборудование
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-9.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Силовое оборудование</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Силовое оборудование
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-10.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Снегоуборочная техника</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Снегоуборочная техника
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-11.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Строительные инструменты</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Строительные инструменты
+									</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -1300,7 +1289,7 @@
 								<li> <a href="#">Вопросы и ответы</a></li>
 							</ul>
 						</div>
-						<div class="col col-lg-4 col-xl-3">
+						<div class="footer__contacts col col-lg-4 col-xl-3">
 							<div class="footer__title">Контакты
 							</div>
 							<address> 
@@ -1365,7 +1354,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="number" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
