--- a/public/03-blog-item.html
+++ b/public/03-blog-item.html
@@ -20,7 +20,7 @@
 			<div class="topLine section" id="topLine">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-auto">
+						<div class="col-lg-auto">
 							<div class="topLine__logo"><a href="/"><img src="img/svg/logo.svg" alt=""/></a>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 						</div>
 						<div class="topLine-menu col-auto">
 							<div class="row">
-								<div class="col-auto d-md-none">
+								<div class="col-auto d-lg-none">
 									<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 									</div>
 								</div>
@@ -581,8 +581,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -593,8 +591,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -605,8 +601,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -617,8 +611,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -629,8 +621,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -641,8 +631,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -653,8 +641,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -665,8 +651,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -677,8 +661,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -689,8 +671,6 @@
 								<div class="swiper-slide">
 									<div class="blog-item">
 										<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-											<div class="blog-item__title">
-											</div>
 										</a>
 										<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 										</a>
@@ -726,7 +706,7 @@
 								<li> <a href="#">Вопросы и ответы</a></li>
 							</ul>
 						</div>
-						<div class="col col-lg-4 col-xl-3">
+						<div class="footer__contacts col col-lg-4 col-xl-3">
 							<div class="footer__title">Контакты
 							</div>
 							<address> 
@@ -791,7 +771,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="number" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
