--- a/public/03-blog.html
+++ b/public/03-blog.html
@@ -20,7 +20,7 @@
 			<div class="topLine section" id="topLine">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-auto">
+						<div class="col-lg-auto">
 							<div class="topLine__logo"><a href="/"><img src="img/svg/logo.svg" alt=""/></a>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 						</div>
 						<div class="topLine-menu col-auto">
 							<div class="row">
-								<div class="col-auto d-md-none">
+								<div class="col-auto d-lg-none">
 									<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 									</div>
 								</div>
@@ -431,11 +431,9 @@
 						</ol>
 					</nav>
 					<div class="row">
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 								</a>
@@ -443,11 +441,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
 								</a>
@@ -455,11 +451,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
 								</a>
@@ -467,11 +461,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
 								</a>
@@ -479,11 +471,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 								</a>
@@ -491,11 +481,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
 								</a>
@@ -503,11 +491,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
 								</a>
@@ -515,11 +501,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
 								</a>
@@ -527,11 +511,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 								</a>
@@ -539,11 +521,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
 								</a>
@@ -551,11 +531,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
 								</a>
@@ -563,11 +541,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-3">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
 								</a>
@@ -602,7 +578,7 @@
 								<li> <a href="#">Вопросы и ответы</a></li>
 							</ul>
 						</div>
-						<div class="col col-lg-4 col-xl-3">
+						<div class="footer__contacts col col-lg-4 col-xl-3">
 							<div class="footer__title">Контакты
 							</div>
 							<address> 
@@ -667,7 +643,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="number" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
