--- a/public/05-account-profile.html
+++ b/public/05-account-profile.html
@@ -20,7 +20,7 @@
 			<div class="topLine section" id="topLine">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-auto">
+						<div class="col-lg-auto">
 							<div class="topLine__logo"><a href="/"><img src="img/svg/logo.svg" alt=""/></a>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 						</div>
 						<div class="topLine-menu col-auto">
 							<div class="row">
-								<div class="col-auto d-md-none">
+								<div class="col-auto d-lg-none">
 									<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 									</div>
 								</div>
@@ -511,7 +511,7 @@
 								<li> <a href="#">Вопросы и ответы</a></li>
 							</ul>
 						</div>
-						<div class="col col-lg-4 col-xl-3">
+						<div class="footer__contacts col col-lg-4 col-xl-3">
 							<div class="footer__title">Контакты
 							</div>
 							<address> 
@@ -576,7 +576,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="number" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
