--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 			<div class="topLine section" id="topLine">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-auto">
+						<div class="col-lg-auto">
 							<div class="topLine__logo"><a href="/"><img src="img/svg/logo.svg" alt=""/></a>
 							</div>
 						</div>
@@ -36,7 +36,7 @@
 						</div>
 						<div class="topLine-menu col-auto">
 							<div class="row">
-								<div class="col-auto d-md-none">
+								<div class="col-auto d-lg-none">
 									<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
 									</div>
 								</div>
@@ -460,103 +460,92 @@
 					<div class="sliderAutoWidth sliderAutoWidth--js swiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-1.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Водоснабжение и полив</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Водоснабжение и полив
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-2.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Мототехника</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Мототехника
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-3.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Обогрев и вентиляция</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Обогрев и вентиляция
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-4.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Продукция STIHL и Viking</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Продукция STIHL и Viking
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-5.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Расходные материалы и аксессуары</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Расходные материалы и аксессуары
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-6.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Садовая техника</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Садовая техника
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-7.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Садовый инвентарь и инструменты</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Садовый инвентарь и инструменты
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-8.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Сварочное оборудование</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Сварочное оборудование
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-9.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Силовое оборудование</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Силовое оборудование
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-10.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Снегоуборочная техника</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Снегоуборочная техника
+									</div>
+								</a>
 							</div>
 							<div class="swiper-slide">
-								<div class="main-cat-item">
+								<a class="main-cat-item" href="#">
 									<div class="main-cat-item__img-wrap"><img src="img/header-icon-11.png" alt="" loading="lazy"/>
 									</div>
-									<a class="main-cat-item__text stretched-link" href="#">
-										<p>Строительные инструменты</p>
-									</a>
-								</div>
+									<div class="main-cat-item__text">Строительные инструменты
+									</div>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -1635,70 +1624,70 @@
 					</div>
 					<div class="row">
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Водоснабжение и полив
-								</a><img src="img/pop-item-1.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Водоснабжение и полив
+								</div><img src="img/pop-item-1.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Мототехника
-								</a><img src="img/pop-item-2.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Мототехника
+								</div><img src="img/pop-item-2.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Обогрев и вентиляция
-								</a><img src="img/pop-item-3.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Обогрев и вентиляция
+								</div><img src="img/pop-item-3.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Продукция STIHL и Viking
-								</a><img src="img/pop-item-4.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Продукция STIHL и Viking
+								</div><img src="img/pop-item-4.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Расходные материалы и аксессуары
-								</a><img src="img/pop-item-5.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Расходные материалы и аксессуары
+								</div><img src="img/pop-item-5.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Садовая техника
-								</a><img src="img/pop-item-6.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Садовая техника
+								</div><img src="img/pop-item-6.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Садовый инвентарь и инструменты
-								</a><img src="img/pop-item-7.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Садовый инвентарь и инструменты
+								</div><img src="img/pop-item-7.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Сварочное оборудование
-								</a><img src="img/pop-item-8.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Сварочное оборудование
+								</div><img src="img/pop-item-8.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Силовое оборудование
-								</a><img src="img/pop-item-9.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Силовое оборудование
+								</div><img src="img/pop-item-9.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Снегоуборочная техника
-								</a><img src="img/pop-item-10.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Снегоуборочная техника
+								</div><img src="img/pop-item-10.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 						<div class="col-6 col-sm-4 col-md-3 col-lg-2">
-							<div class="sPopCategories__item">
-								<a class="sPopCategories__item-title stretched-link" href="#">Стероительные инструменты
-								</a><img src="img/pop-item-11.jpg" alt="" loading="lazy"/>
-							</div>
+							<a class="sPopCategories__item" href="#">
+								<div class="sPopCategories__item-title">Стероительные инструменты
+								</div><img src="img/pop-item-11.jpg" alt="" loading="lazy"/>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -2841,11 +2830,9 @@
 							<h2>Блог</h2></a>
 					</div>
 					<div class="row">
-						<div class="col-6 col-sm-4 col-lg-4">
+						<div class="col-12 col-sm-4 col-lg-4">
 							<div class="blog-item blog-item--lg">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-1.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Уход за триммером для травы: правила и рекомендации
 								</a>
@@ -2853,11 +2840,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-2.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Как выбрать тепловую пушку: классификация, характеристики, популярные модели
 								</a>
@@ -2865,11 +2850,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-3.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Самый проходимый снегоход в глубоком снегу
 								</a>
@@ -2877,11 +2860,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-4.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Профессиональная бензопила для валки леса: рейтинг лучших
 								</a>
@@ -2889,11 +2870,9 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-6 col-sm-4 col-lg-2">
+						<div class="col-12 col-sm-4 col-lg-2">
 							<div class="blog-item">
 								<a class="blog-item__img-wrap" href="#"><img src="img/blog-item-5.png" alt="" loading="lazy"/>
-									<div class="blog-item__title">
-									</div>
 								</a>
 								<a class="blog-item__caption" href="#">Ретинг бензиновых измельчителей веток
 								</a>
@@ -3054,12 +3033,12 @@
 							<div class="form-wrap">
 								<form>
 									<div class="row">
-										<div class="col">
+										<div class="col-lg">
 											<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Введите свой e-mail"/>
 											</div>
 											<!-- +e.input-wrap-->
 										</div>
-										<div class="col-auto">
+										<div class="col-lg-auto">
 											<button class="form-wrap__btn" type="button">Подписаться
 											</button>
 										</div>
@@ -3097,7 +3076,7 @@
 								<li> <a href="#">Вопросы и ответы</a></li>
 							</ul>
 						</div>
-						<div class="col col-lg-4 col-xl-3">
+						<div class="footer__contacts col col-lg-4 col-xl-3">
 							<div class="footer__title">Контакты
 							</div>
 							<address> 
@@ -3162,7 +3141,7 @@
 						</div>
 						<!-- +e.input-wrap-->
 						<div class="form-wrap__input-wrap form-group">
-							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="number" placeholder="" step="any" required="required"/>
+							<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
 							</label>
 						</div>
 						<!-- +e.input-wrap-->
