--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -21,7 +21,7 @@
 					<li> <a href="#">Вопросы и ответы</a></li>
 				</ul>
 			</div>
-			<div class="col col-lg-4 col-xl-3">
+			<div class="footer__contacts col col-lg-4 col-xl-3">
 				<div class="footer__title">Контакты
 				</div>
 				<address> 
@@ -94,7 +94,7 @@
 					<li> <a href="#">Вопросы и ответы</a></li>
 				</ul>
 			</div>
-			<div class="col col-lg-4 col-xl-3">
+			<div class="footer__contacts col col-lg-4 col-xl-3">
 				<div class="footer__title">Контакты
 				</div>
 				<address> 
