--- a/public/parts/modal.html
+++ b/public/parts/modal.html
@@ -12,7 +12,7 @@
 				</div>
 				<!-- +e.input-wrap-->
 				<div class="form-wrap__input-wrap form-group">
-					<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="number" placeholder="" step="any" required="required"/>
+					<label><span class="form-wrap__input-title">Телефон: </span><input class="form-wrap__input form-control" name="number" type="tel" placeholder="" step="any" required="required"/>
 					</label>
 				</div>
 				<!-- +e.input-wrap-->
